# aoc2023

./: Cargo.toml
src/: day01.rs  day02.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_v2.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day12_v2.rs  day13.rs  day14.rs  day15.rs  day16.rs  day16_v2.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day7.rs  day7_v2.rs  day8.rs  main.rs  perf.data  perf.data.old
src/inputs/: 1.txt  4.txt  temp.py
