[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
onig = { version = "6.4.0", git = "https://github.com/rust-onig/rust-onig.git"}
regex = "1.10.2"

[profile.dev]
overflow-checks = false

