[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = "0.3.2"
itertools = "0.12.0"
num = "0.4.1"
onig = { version = "6.4.0", git = "https://github.com/rust-onig/rust-onig.git"}
rayon = "1.8.0"
regex = "1.10.2"

[profile.dev]
overflow-checks = false

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling

