[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
itertools = "0.12.0"
num = "0.4.1"
rayon = "1.8.0"
rusymbols = "0.1.2"

[profile.dev]
overflow-checks = false

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling

